# zombiroid

./: .gitignore  CMakeLists.txt  game.cpp  zombiroidgame
zombiroidgame.dSYM/Contents/: Info.plist
